JEKT-2394 - 🔁 Modified - Adding Pipelines to Source System Jobs for Release 3 - con't     - Job        - BBL_PIPELINE_JOB        - GEU_PIPELINE_JOB        - P01_PIPELINE_JOB        - FSN_PIPELINE_JOB        - MRS_PIPELINE_JOB        - DEU_PIPELINE_JOB        - SVS_PIPELINE_JOB        - TAI_PIPELINE_JOB        - MBP_PIPELINE_JOB        - BWI_PIPELINE_JOB        - HCS_PIPELINE_JOB        - ATL_PIPELINE_JOB        - BBA_PIPELINE_JOB        - BW2_PIPELINE_JOB        - DJD_PIPELINE_JOB        - GMD_PIPELINE_JOB        - JEM_PIPELINE_JOB        - BBN_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7200,7 +7200,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-16 23:22:51'
+    modifiedAt: '2023-05-17 13:21:04'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -7237,7 +7237,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-05-16 23:27:30'
+    modifiedAt: '2023-05-17 13:21:42'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
@@ -7275,7 +7275,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-05-16 23:34:04'
+    modifiedAt: '2023-05-17 13:24:25'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
@@ -7313,7 +7313,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-05-16 23:35:57'
+    modifiedAt: '2023-05-17 13:24:58'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
     name: MRS_PIPELINE_JOB
@@ -7331,6 +7331,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_mrs
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
@@ -7339,14 +7340,17 @@ jobs:
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-05-08 18:25:50'
+    modifiedAt: '2023-05-17 13:37:18'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
     name: HCS_PIPELINE_JOB
@@ -7367,20 +7371,24 @@ jobs:
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_MD_MATL_HCS
     - pipelines/SAP_MD_MATL_INV_HCS
     - pipelines/SAP_01_MD_SHIP
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_hcs
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-05-08 18:27:17'
+    modifiedAt: '2023-05-17 13:20:15'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
@@ -7398,6 +7406,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_MD_MATL_MBP
     - pipelines/SAP_MD_DELV_LINE_MBP
     - pipelines/SAP_01_MD_SHIP_MBP
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
@@ -7407,14 +7416,17 @@ jobs:
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/MD_SLS_ORDR_LINE_MBP
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-05-08 18:36:30'
+    modifiedAt: '2023-05-17 13:19:19'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
     name: P01_PIPELINE_JOB
@@ -7432,6 +7444,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
@@ -7440,7 +7453,10 @@ jobs:
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_MATL_INV_P01
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_P01
     jobClusterMode:
       clusterMode:
@@ -7448,7 +7464,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-05-08 18:25:59'
+    modifiedAt: '2023-05-17 13:47:06'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
     name: SVS_PIPELINE_JOB
@@ -7466,21 +7482,26 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_MATL_INV_P01
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_svs
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-05-08 18:36:38'
+    modifiedAt: '2023-05-17 14:00:11'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
@@ -7563,7 +7584,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-16 23:38:08'
+    modifiedAt: '2023-05-17 13:27:10'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
@@ -7586,6 +7607,7 @@ jobs:
     - pipelines/SAP_MD_MATL_INV_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_FSN
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
@@ -7599,7 +7621,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-16 23:39:58'
+    modifiedAt: '2023-05-17 13:41:57'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -7672,14 +7694,18 @@ jobs:
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_TAI
     - pipelines/SAP_MD_MATL_INV_TAI
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
+    - pipelines/SAP_MD_MATL_TAI
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_MATL_MVMT_HDR
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-05-08 18:25:54'
+    modifiedAt: '2023-05-17 14:03:56'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
@@ -7735,7 +7761,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-05-16 23:45:11'
+    modifiedAt: '2023-05-17 13:29:00'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
     name: BW2_PIPELINE_JOB
@@ -7754,9 +7780,13 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     - pipelines/JDE_MD_MATL_BW2
+    - pipelines/JDE_MD_MATL_MVMT_HDR_BW2
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/JDE_BW2_MD_MATL
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_MATL_INV
@@ -7766,7 +7796,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-08 18:30:05'
+    modifiedAt: '2023-05-17 14:08:36'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -7786,10 +7816,15 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_MD_MATL_LOC_DEU
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -7797,7 +7832,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:23'
-    modifiedAt: '2023-05-08 18:30:15'
+    modifiedAt: '2023-05-17 14:17:26'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
     name: DJD_PIPELINE_JOB
@@ -7817,8 +7852,11 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_MD_MATL_LOC_DJD
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -7826,7 +7864,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:54'
-    modifiedAt: '2023-05-08 18:27:56'
+    modifiedAt: '2023-05-17 14:15:48'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
     name: GMD_PIPELINE_JOB
@@ -7845,11 +7883,15 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     - pipelines/JDE_MD_MATL_LOC_GMD
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -7857,7 +7899,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-08 18:27:27'
+    modifiedAt: '2023-05-17 14:37:43'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -7877,10 +7919,15 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_MATL_LOC_JEM
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -7888,7 +7935,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-05-08 18:36:57'
+    modifiedAt: '2023-05-17 14:43:10'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
     name: JES_PIPELINE_JOB
