JEKT-1896 Created new Named Config dataset for F0005 and added in filter config (3 arguments!!) ❇️ New     - Dataset        - DS_JDE_F0005_NC
🔁 Modified
    - Pipeline
       - JDE_MD_MATL_JET

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,11 +2094,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-17 10:51:58'
-    modifiedAt: '2023-05-17 15:13:06'
+    modifiedAt: '2023-05-17 16:01:26'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
       - datasets/DS_JDE_01_F4101
+      - datasets/DS_JDE_F0005_NC
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -7039,6 +7040,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-05 08:22:07'
         modifiedAt: '2023-05-05 08:22:07'
+  datasets/DS_JDE_F0005_NC:
+    name: DS_JDE_F0005_NC
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-17 15:37:41'
+    modifiedAt: '2023-05-17 15:42:45'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-17 15:37:41'
+        modifiedAt: '2023-05-17 15:37:41'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
