JEKT-1896 Source gem created for F554101B and join made to F4101 for later lookups ❇️ New     - Dataset        - DS_JDE_F554101B_NC
🔁 Modified
    - Pipeline
       - JDE_MD_MATL_JET

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,12 +2094,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-17 10:51:58'
-    modifiedAt: '2023-05-17 16:01:26'
+    modifiedAt: '2023-05-17 16:33:18'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
       - datasets/DS_JDE_01_F4101
       - datasets/DS_JDE_F0005_NC
+      - datasets/DS_JDE_F554101B_NC
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -7055,6 +7056,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-17 15:37:41'
         modifiedAt: '2023-05-17 15:37:41'
+  datasets/DS_JDE_F554101B_NC:
+    name: DS_JDE_F554101B_NC
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-17 16:24:21'
+    modifiedAt: '2023-05-17 16:25:27'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-17 16:24:21'
+        modifiedAt: '2023-05-17 16:24:21'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
