JEKT - 2394 - 🔁 Modified - Added more Pipelines to Jobs - more to be updated once merged into Beta.     - Job        - JEM_PIPELINE_JOB        - JET_PIPELINE_JOB        - JES_PIPELINE_JOB        - ATL_PIPELINE_JOB        - MTR_PIPELINE_JOB        - JSW_PIPELINE_JOB        - SJD_PIPELINE_JOB        - BBA_PIPELINE_JOB        - BW2_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7200,7 +7200,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-17 13:21:04'
+    modifiedAt: '2023-05-17 15:54:08'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -7237,7 +7237,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-05-17 13:21:42'
+    modifiedAt: '2023-05-17 16:00:12'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
@@ -7796,7 +7796,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-17 14:08:36'
+    modifiedAt: '2023-05-17 15:19:58'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -7935,7 +7935,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-05-17 14:43:10'
+    modifiedAt: '2023-05-17 16:13:05'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
     name: JES_PIPELINE_JOB
@@ -7954,11 +7954,16 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_MD_MATL_LOC_JES
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -7966,7 +7971,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:11'
-    modifiedAt: '2023-05-08 18:37:06'
+    modifiedAt: '2023-05-17 15:28:29'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
     name: JET_PIPELINE_JOB
@@ -7986,10 +7991,15 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_MD_MATL_LOC_JET
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -7997,7 +8007,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-05-08 18:26:17'
+    modifiedAt: '2023-05-17 16:18:40'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
     name: JNS_PIPELINE_JOB
@@ -8041,10 +8051,14 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_MATL_LOC_JSW
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -8052,7 +8066,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-05-08 18:37:18'
+    modifiedAt: '2023-05-17 16:19:28'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
     name: MTR_PIPELINE_JOB
@@ -8071,10 +8085,14 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_MD_MATL_LOC_MTR
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -8082,7 +8100,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:47'
-    modifiedAt: '2023-05-08 18:37:25'
+    modifiedAt: '2023-05-17 16:23:43'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
     name: SJD_PIPELINE_JOB
@@ -8102,10 +8120,14 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_BOM_HDR_BW2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     - pipelines/JDE_MD_MATL_LOC_SJD
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -8113,7 +8135,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:29:19'
-    modifiedAt: '2023-05-08 18:39:25'
+    modifiedAt: '2023-05-17 16:26:54'
     author: smille29@its.jnj.com
   jobs/JOB_MD_BOM_HDR:
     name: JOB_MD_BOM_HDR
