JEKT-1871 - PIPELINE FOR DEU_DJD_JEM_JET_SJD ❇️ New     - Pipeline        - JDE_MD_SLS_ORDR_HIST_JDE_DEU_DJD_JEM_JET_SJD
🔁 Modified
    - Dataset
       - DS_JDE_MD_SLS_ORDR_HIST_JDE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2102,6 +2102,22 @@ pipelines:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_SLS_ORDR_HIST_JDE_DEU_DJD_JEM_JET_SJD:
+    name: JDE_MD_SLS_ORDR_HIST_JDE_DEU_DJD_JEM_JET_SJD
+    description: ''
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-17 13:30:34'
+    modifiedAt: '2023-05-17 16:50:44'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_F42199
+      outputs:
+      - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7058,7 +7074,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-05-17 09:01:13'
-    modifiedAt: '2023-05-17 13:18:12'
+    modifiedAt: '2023-05-17 15:32:21'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
