JEKT-1726 Updated name of pipeline, changed MANDT for HM2 🔁 Modified     - Pipeline        - SAP_MD_MATL_VALUT        - JDE_MD_MATL_VALUT     - Job        - MD_MATL_VALUT_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,7 +2094,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-06 08:36:05'
-    modifiedAt: '2023-05-16 14:54:01'
+    modifiedAt: '2023-05-17 16:53:23'
     datasets:
       inputs:
       - datasets/DS_SAP_MARA_01
@@ -2104,14 +2104,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_MATL_VALUT_JDE:
-    name: MD_MATL_VALUT_JDE
+    name: JDE_MD_MATL_VALUT
     description: Valuation of material inventory for JDE Systems
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-09 12:49:52'
-    modifiedAt: '2023-05-16 14:48:18'
+    modifiedAt: '2023-05-17 16:57:13'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101_NC
@@ -8813,7 +8813,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-16 15:12:34'
-    modifiedAt: '2023-05-16 15:39:42'
+    modifiedAt: '2023-05-17 17:00:37'
     author: natkins7@its.jnj.com
 functions:
   author: null
