--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2087,14 +2087,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_md_matl_dstn_chn:
-    name: SAP_01_md_matl_dstn_chn
+    name: SAP_01_md_matl_dstn_chn_bba_bbl_bbn_bwi_geu_hcs_mbp_mrs_p01_tai_svs_hmd_hm2_atl_fsn
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-16 09:44:01'
-    modifiedAt: '2023-05-17 15:51:49'
+    modifiedAt: '2023-05-17 17:27:45'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
