--- a/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
@@ -206,28 +206,28 @@ schema:
       mappings: []
       tags: []
   - name: MIN_ORDR_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MIN_DELV_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MIN_MTO_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_UNIT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -395,7 +395,7 @@ schema:
       mappings: []
       tags: []
   - name: MAX_DELV_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -430,7 +430,7 @@ schema:
       mappings: []
       tags: []
   - name: MATL_SORT
-    type: string
+    type: integer
     nullable: true
     metadata:
       description: ''
