JEKT-1871 - gmd pipeline ❇️ New     - Pipeline        - JDE_MD_SLS_ORDR_HIST_JDE_GMD
🔁 Modified
    - Dataset
       - DS_JDE_MD_SLS_ORDR_HIST_JDE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2118,6 +2118,22 @@ pipelines:
       - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_SLS_ORDR_HIST_JDE_GMD:
+    name: JDE_MD_SLS_ORDR_HIST_JDE_GMD
+    description: ''
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-17 17:03:17'
+    modifiedAt: '2023-05-17 17:37:18'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_F42199
+      outputs:
+      - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7074,7 +7090,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-05-17 09:01:13'
-    modifiedAt: '2023-05-17 15:32:21'
+    modifiedAt: '2023-05-17 17:37:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
